objects/Jloc_Clientplan_Exception_Audit_Trail__c.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Notes__c</fullName>
        <label>Developer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_DateTime__c</fullName>
        <label>Exception DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <label>Exception Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Jloc/Clientplan Exception Audit Trail</label>
    <nameField>
        <label>Jloc/Clientplan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jloc/Clientplan Exception Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>